--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -46,6 +46,10 @@ format:
     citations-hover: true
     quarto-required: ">= 1.4.0" # To fix crossrefs
     linkcolor: lightblue
+    toc: true
+    monobackgroundcolor: white
+    # code-block-background: true
+    # code-block-bg: true
   # pdf:
   #   quarto-required: ">= 1.4.0"
   #   documentclass: scrreprt
