--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ data/kaggle_lokeshparab/Amazon-Products.csv
 data/kaggle_asaniczka/amazon_products.csv
 data/products_cleaned.csv
 data/kaggle_asaniczka/amazon_products_cleaned.csv
+quarto/_freeze
