--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -47,7 +47,8 @@ format:
     quarto-required: ">= 1.4.0" # To fix crossrefs
     linkcolor: lightblue
     toc: true
-    monobackgroundcolor: white
+    grid:
+      body-width: 1200px
     # code-block-background: true
     # code-block-bg: true
   # pdf:
@@ -71,7 +72,7 @@ format:
 ## Extra settings
 execute:
   echo: false # Don't include code in the report
-  freeze: false # Not useful when rendering across multiple users
+  freeze: auto # Not useful when rendering across multiple users
   warning: false
   error: false
 
