More PCA, finished intro, initial clustering

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ data/kaggle_asaniczka/amazon_products.csv
 data/products_cleaned.csv
 data/kaggle_asaniczka/amazon_products_cleaned.csv
 quarto/_freeze
+*__pycache__
