--- a/quarto/_quarto.yml
+++ b/quarto/_quarto.yml
@@ -73,7 +73,7 @@ format:
 ## Extra settings
 execute:
   echo: false # Don't include code in the report
-  freeze: auto # Not useful when rendering across multiple users
+  freeze: true # Not useful when rendering across multiple users
   warning: false
   error: false
 
